// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DetailInfoHeader component Snapshot matchs 1`] = `
Array [
  <h2>
    <strong>
        Fight Club
    </strong>
</h2>,
  <h4
    style={
        Object {
            "fontStyle": "oblique",
            "marginLeft": "10px",
          }
    }
>
     
    — 
    Mischief. Mayhem. Soap.
</h4>,
]
`;

exports[`DetailInfoHeader component Snapshot tagline No tagline 1`] = `
<h2>
  <strong>
    Fight Club
  </strong>
</h2>
`;

exports[`DetailInfoHeader component Snapshot tagline Tagline is empty string 1`] = `
<h2>
  <strong>
    Fight Club
  </strong>
</h2>
`;

exports[`DetailInfoHeader component Snapshot tagline Tagline is null 1`] = `
<h2>
  <strong>
    Fight Club
  </strong>
</h2>
`;
